There was a changed for the link

--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
                     <input type="password" minlength="5" placeholder="Password">
                     <input type="submit" value="Log In" id="submit">
                     <div>
-                        <p><a href="forgot-account.html" class="forget">Forgot Account? </a></p>
+                        <p><a href="forgot-account.html" class="forget">Forgot Account? </a></p>&#183;
                         <p><a href="*" class="sign">Sign up for Facebook</a></p>
                     </div>
                     
