Working on Forgot Link
I have to improve the design and user interface for the link of forgot password

--- a/forgot-account.html
+++ b/forgot-account.html
@@ -6,11 +6,13 @@
         <meta name="author" content="Angelo Joseph Joseph">
         <link rel="stylesheet" href="forgot-account.css">
         <title>Forgot Password | Can't log in</title>
+        <link rel="icon" type="image/x-icon" href="facebook.png">
     </head>
     <body>
         <header>
-            <h1>Facebook</h1>
-            
+            <h1>facebook</h1>
+            <input type="email" minlength="5" placeholder="Email or phone number">
+            <input type="password" minlength="5" placeholder="Password">
         </header>
         <main>
 
